<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuddyLocate</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="user_notexist">用户不存在</string>
    <string name="pswd_incorrect">密码错误</string>
    <string name="user_existed">用户名已经存在</string>
    <string name="pswd_diff">两次输入的密码不一致</string>
    <string name="cantconnect">连接服务器失败</string>
    <string name="reg">注册</string>
    <string name="user">用户</string>
    <string name="pswd">密码</string>
    <string name="repswd">重复密码</string>
    <string name="contacts">我的联系人</string>
    <string name="action_exit">退出</string>
    <string name="confirm">你确定要退出吗</string>
    <string name="menu">菜单</string>
    <string name="yes">是</string>
    <string name="no">否</string>    

</resources>