<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pswd"
        android:layout_alignLeft="@+id/pswd"
        android:layout_alignRight="@+id/pswd"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pswd"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="117dp"
        android:layout_marginLeft="33dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pswd"
        android:layout_below="@+id/pswd"
        android:layout_marginRight="32dp"
        android:text="@string/reg" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_marginBottom="14dp"
        android:layout_toRightOf="@+id/textuser"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user"
        android:layout_alignBottom="@+id/user"
        android:text="@string/user" />

    <TextView
        android:id="@+id/textpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pswd"
        android:layout_alignBottom="@+id/pswd"
        android:layout_alignLeft="@+id/textuser"
        android:text="@string/pswd" />

    <TextView
        android:id="@+id/loginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user"
        android:layout_toLeftOf="@+id/reg"
        android:text="" />

</RelativeLayout>